* 2014-09-01 - jan.bauerdick@open-xchange.com

 - Fix for bug 33354: Added display message for invalid characters in folder name

* 2014-08-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 33748: Don't attempt to read more bytes from the buffer than available 

* 2014-08-14 - thorben.betten@open-xchange.com

 - Fix for bug 34035: Properly acquire message's source

* 2014-08-14 - martin.herfurth@open-xchange.com

 - Fix for bug 34041: Ignore additional elements in autoconfig xml.

* 2014-08-13 - martin.herfurth@open-xchange.com

- Fix for bug 34023: Default display message for category user input.

* 2014-08-08 - martin.herfurth@open-xchange.com

 - Fix for bug 30599: Ical export stumbles over bad reccurring appointment.

* 2014-08-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 33914: Corrected parameter index when dropping the +/- variants of user capabilities

* 2014-08-06 - steffen.templin@open-xchange.com

 - Fix for bug 33918: Translate display names of subscription sources only if necessary

* 2014-08-04 - marcus.klein@open-xchange.com

 - Fix for bug 33891: Removed superfluous line throwing always an exception.

* 2014-08-01 - thorben.betten@open-xchange.com

 - Fix for bug 33715: Accept new parameter "attach_src" for action=get request to let the client signal RFC822 source is supposed to be
                      attached to generated JSON mail representation
 - Fix for bug 33850: Keep "Message-Id" header on message transport

* 2014-07-31 - thorben.betten@open-xchange.com

 - Fix for bug 33839: Escape site information when generating the publication site from selected template

* 2014-07-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 32897: Send empty string for default alarms in CalDAV

* 2014-07-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 33652: Also accept "updateToken" requests without service identifier 
 - Fix for bug 30654: Try fallback based on the file extension in case there's no preview service for mime type 
